examples/negative/parse_errors/L4/record_no_end.ob
MODULE RecordNoEnd;

TYPE RecordTest = RECORD
       foo: INTEGER;
       bar: BOOLEAN;

VAR r: RecordTest;

BEGIN
  r.foo := 42;
  r.bar := TRUE;
END RecordNoEnd.
